@@ -1,3 +1,7 @@
+4 October 2023: Wouter
+	- Fix #946: Forwarder returns servfail on upstream response noerror no
+	  data.
+
 3 October 2023: George
 	- Merge #881: Generalise the proxy protocol code.
 
